--- a/app/views/equipments/equipmentsList.scala.html
+++ b/app/views/equipments/equipmentsList.scala.html
@@ -3,7 +3,7 @@
 @import helper.twitterBootstrap._
 
 
-@main(currentUser, role, "Lista użytkowników"){
+@main(currentUser, role, "Lista użytkowników", false){
 <meta charset="UTF-8">
 
 	<div class="container">
