--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,5 @@
 @(currentUser: User, role: String)
-@main(currentUser, role, "Witamy w AKGtool !") {
+@main(currentUser, role, "Witamy w AKGtool !", false) {
 	<meta charset="UTF-8">
 	<div>
 		<br>
