--- a/app/views/payment/paymentsList.scala.html
+++ b/app/views/payment/paymentsList.scala.html
@@ -3,7 +3,7 @@
 @import helper.twitterBootstrap._
 
 
-@main(currentUser, role, "Lista płatności"){
+@main(currentUser, role, "Lista płatności", false){
 <meta charset="UTF-8">
 
 	<div class="container">
