--- a/app/views/settings.scala.html
+++ b/app/views/settings.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @import helper.twitterBootstrap._
 
-@main(currentUser, role, "Settings"){
+@main(currentUser, role, "Settings", false){
 	<div class="container col-md-offset-2">
 		<br>
 		<h1 align="center">System settings</h1>
