--- a/app/views/courses/coursesList.scala.html
+++ b/app/views/courses/coursesList.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @import helper.twitterBootstrap._
 
-@main(currentUser, role, "Lista kursów"){
+@main(currentUser, role, "Lista kursów", false){
 <meta charset="UTF-8">
 
 	
