--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @import helper.twitterBootstrap._
 
-@main(currentUser, role, "Logowanie użytkownika"){
+@main(currentUser, role, "Logowanie użytkownika", false){
 	<meta charset="UTF-8">
 	
 	<div class="container col-md-offset-4 col-md-4 panal panel-default" align="center">
@@ -14,7 +14,7 @@
 		<div class="panel panel-default">
 			@helper.form(action = routes.Application.authenticate(), 'enctype -> "multipart/form-data") {
 			<fieldset>
-				<legend><i class="glyphicon glyphicon-user"></i> Zaloguj się :</legend>
+				<legend align="center"><i class="glyphicon glyphicon-user"></i> Zaloguj się :</legend>
 				@helper.inputText(userAccountForm("userName"), '_label -> "Nazwa użytkownika", '_size -> 50)
 				@helper.inputPassword(userAccountForm("passwordHash"), '_label -> "Hasło", '_size -> 50)	
 			</fieldset>
