--- a/app/views/userInfo.scala.html
+++ b/app/views/userInfo.scala.html
@@ -1,5 +1,5 @@
 @(currentUser: User, role: String)
-@main(currentUser, role, "Moje konto"){
+@main(currentUser, role, "Moje konto", false){
 <div align="center">
 	<br>
 	<br>
