--- a/app/views/courses/courseMeetingDetails.scala.html
+++ b/app/views/courses/courseMeetingDetails.scala.html
@@ -112,7 +112,7 @@
 									    	</a>
 									    </span>
 									    <!-- This will be hidden -->
-									    <input  id="presentMembers_ids" name="presentMembers_ids" value="@if(meeting != null ){@meeting.presentMembers_ids}"></input>
+									    	<input hidden id="presentMembers_ids" name="presentMembers_ids" value="@if(meeting != null ){@meeting.presentMembers_ids}"></input>
 									</div>							    	
 								</div>
 					</div>		
